# goonga

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
assets/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  qml.qrc
src/imageprovider/: CMakeLists.txt  ImageProvider.cpp  ImageProvider.h
src/nowplaying/: CMakeLists.txt  NowPlaying.cpp  NowPlaying.h
src/qml/: NowPlayingItem.qml  main.qml
src/qml/components/: Overlay.qml
src/qml/windows/: NowPlayingWindow.qml  QueueWindow.qml
